hw/HW2/demo5.1.txt

roost@XANADU-2095 MINGW64 ~
$ python3
Python 3.12.2 (tags/v3.12.2:6abddd9, Feb  6 2024, 21:26:36) [MSC v.1937 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> planets=[]
>>> planets.append("Mercury)
  File "<stdin>", line 1
    planets.append("Mercury)
                   ^
SyntaxError: unterminated string literal (detected at line 1)
>>> planets.append("Mercury")
>>> planets.append("Earth")
>>> planets.append("Mars")
>>> planets.insert(1, "Venus")
>>> print(planets)
['Mercury', 'Venus', 'Earth', 'Mars']
>>> print(planets[2])
Earth
>>> planets[3]="Ares"
>>> print(planets)
['Mercury', 'Venus', 'Earth', 'Ares']
>>> planets.append("Jupiter")
>>> print(planets)
['Mercury', 'Venus', 'Earth', 'Ares', 'Jupiter']
>>> planets.remove("Jupiter")
>>> print(planets)
['Mercury', 'Venus', 'Earth', 'Ares']
>>> print(len(planets))
4
>>>
>>> #dictionary
>>> fourth_planet={"name" : "Mars", "moons" : ["Phobos", "Deimos"], "atmosphere" : False}
>>> print(fourth_planet)
{'name': 'Mars', 'moons': ['Phobos', 'Deimos'], 'atmosphere': False}
>>> fourth_planet["atmosphere"] = True #to edit mistake
>>> print(fourth_planet)
{'name': 'Mars', 'moons': ['Phobos', 'Deimos'], 'atmosphere': True}
>>>
>>> #advanced list stuff
>>> nums = [1,2,3,4,5,6,7,8,9]
>>> sliced = nums[1:9]
>>> print(len(sliced))
8
>>> print(sliced)
[2, 3, 4, 5, 6, 7, 8, 9]
>>> #list[start:end (exclusive)]
>>>
>>> r=nums[8::-2]
>>> print(r)
[9, 7, 5, 3, 1]
>>> L1=["a","b","c"]
>>> L2=[10,11,12]
>>> L3 = L1 + L2
>>> print(L3)
['a', 'b', 'c', 10, 11, 12]
>>> L4 = [True, False, False]
>>> L1.extend(L4)
>>> print(L1)
['a', 'b', 'c', True, False, False]
>>>
>>> desserts=["cookie","icecream","brownie","candy"]
>>> c_words=[dessert.upper() for dessert in desserts if dessert.startswith('c')]
>>> print(c_words)
['COOKIE', 'CANDY']
>>>
>>> friends_fav_nums = {"Bob" : [5, 13, 29], "Gail" : [22, 1, 568], "Xavier" : [88, 35, 69]}
>>>
>>> average_nums = {name : sum(num) / len(num) for name, num in friends_fav_nums.items()}
>>> #averages the values in each key??
>>> print(average_nums)
{'Bob': 15.666666666666666, 'Gail': 197.0, 'Xavier': 64.0}
>>>
